fix: removed horizontal scroll at width from 335 to 320 and corrected footer

--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -4,7 +4,7 @@
     justify-content: center;
     width: 100%;
     height: 270px;
-    overflow: auto;
+    overflow-y: auto;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
     scrollbar-color:#02b3f8 #f5f7f8;
@@ -16,7 +16,7 @@
     justify-content: center;
     flex-wrap: wrap;
     max-height: 230px;
-    overflow: auto;
+    overflow-y: auto;
     scrollbar-color:#4b4b4b #f5f7f8;
     scrollbar-width: auto;
 }
@@ -30,7 +30,8 @@
     font: inherit;
     line-height: 1;
     margin: 0.5em;
-    padding: 1em 2em;
+    padding-block: 1em;
+    padding-inline: clamp(0.5em, 5.5vw, 2em);
     color: #02b3f8;
     transition: 0.25s;
     cursor: pointer;
@@ -71,6 +72,6 @@
         height: 200px;
     }
     .source__buttons-category{
-        height: 160px;
+        height: 150px;
     }
 }
